--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "car-dealership",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "This is a learning project for understanding the basics and better practices for NestJS Resources",
+  "author": "Carlos Rojas",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -23,8 +23,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -34,6 +37,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
